Fixed 404 page image being oversized on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ span.separator { padding: 0 4px; color: #222; }
 
 hr.hfSep{ border-top: 3px double #8c8b8b; }
 
+img.error { border-radius: 25px;padding: 20px; width: 300px;height: 250px; }
+
 /*
 HEADER
 ____________________ */
@@ -50,6 +52,7 @@ ____________________ */
 	header { text-align:center; }
 	h1 { text-align:center;}
 	#navCont { text-align:center; padding-right:0px; }
+    img.error{ width: 200px; height: 150px; }
 }
 
 /*
